[gd_scene load_steps=28 format=2]

[ext_resource path="res://sprites/spaceship.png" type="Texture" id=1]
[ext_resource path="res://player.gd" type="Script" id=2]
[ext_resource path="res://HUD.tscn" type="PackedScene" id=3]
[ext_resource path="res://sprites/fire.png" type="Texture" id=4]
[ext_resource path="res://thrust_front.gd" type="Script" id=5]
[ext_resource path="res://thrust_back.gd" type="Script" id=6]
[ext_resource path="res://thrust_left.gd" type="Script" id=7]
[ext_resource path="res://thrust_right.gd" type="Script" id=8]
[ext_resource path="res://Map.gd" type="Script" id=9]
[ext_resource path="res://sprites/arrow.png" type="Texture" id=10]
[ext_resource path="res://sprites/grey.png" type="Texture" id=11]
[ext_resource path="res://sprites/home.png" type="Texture" id=12]
[ext_resource path="res://RoomButton.gd" type="Script" id=13]
[ext_resource path="res://sounds/warp.wav" type="AudioStream" id=15]
[ext_resource path="res://sounds/Bip.wav" type="AudioStream" id=16]
[ext_resource path="res://CameraLabeling.gd" type="Script" id=17]
[ext_resource path="res://ContextMenu.gd" type="Script" id=18]
[ext_resource path="res://CloseButton.gd" type="Script" id=19]
[ext_resource path="res://sprites/reject.png" type="Texture" id=20]
[ext_resource path="res://sprites/icon.png" type="Texture" id=21]
[ext_resource path="res://ContextButton.gd" type="Script" id=22]
[ext_resource path="res://BigMenu.gd" type="Script" id=23]
[ext_resource path="res://BigContextMenu.gd" type="Script" id=24]
[ext_resource path="res://wheel.gd" type="Script" id=25]
[ext_resource path="res://SpinButton.gd" type="Script" id=26]
[ext_resource path="res://SpinMenu.gd" type="Script" id=27]

[sub_resource type="CircleShape2D" id=1]

[node name="SpaceGame" type="Node2D"]
position = Vector2( -35.1618, -20.3568 )

[node name="player" type="Node2D" parent="."]
script = ExtResource( 2 )

[node name="ship" type="Sprite" parent="player"]
scale = Vector2( 0.5, 0.5 )
z_index = -2
texture = ExtResource( 1 )

[node name="thrust_front" type="Sprite" parent="player"]
position = Vector2( -22.846, -0.958652 )
rotation = -1.5708
scale = Vector2( 1.57212, 1 )
z_index = -1
texture = ExtResource( 4 )
script = ExtResource( 5 )

[node name="thrust_back" type="Sprite" parent="player"]
position = Vector2( 20.5881, -1.80286 )
rotation = 1.5708
scale = Vector2( 0.739948, 0.705273 )
z_index = -1
texture = ExtResource( 4 )
script = ExtResource( 6 )

[node name="thrust_right" type="Sprite" parent="player"]
position = Vector2( 0.950329, -19.3924 )
rotation = 0.0499072
scale = Vector2( 0.739948, 0.705273 )
z_index = -1
texture = ExtResource( 4 )
script = ExtResource( 8 )

[node name="thrust_left" type="Sprite" parent="player"]
position = Vector2( 1.36852, 12.3846 )
rotation = 3.142
scale = Vector2( 0.739948, 0.705273 )
z_index = -1
texture = ExtResource( 4 )
script = ExtResource( 7 )

[node name="Camera2D" type="Camera2D" parent="player"]
rotating = true
current = true
script = ExtResource( 17 )

[node name="Map" type="TextureRect" parent="player/Camera2D"]
visible = false
margin_left = -491.0
margin_top = -280.0
margin_right = 491.0
margin_bottom = 282.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource( 11 )
stretch_mode = 2
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Line2D" type="Line2D" parent="player/Camera2D/Map"]
points = PoolVector2Array( 605.724, 181.706, 378.724, 244.706 )
width = 3.0
default_color = Color( 0.4, 0.501961, 1, 1 )

[node name="Button1" type="TextureButton" parent="player/Camera2D/Map"]
margin_left = 343.083
margin_top = 213.575
margin_right = 407.083
margin_bottom = 277.575
texture_normal = ExtResource( 10 )
script = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="TextureButton" parent="player/Camera2D/Map"]
margin_left = 567.294
margin_top = 149.364
margin_right = 631.294
margin_bottom = 213.364
texture_normal = ExtResource( 10 )
script = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}
numroom = 1

[node name="Label" type="Label" parent="player/Camera2D/Map"]
margin_left = 442.0
margin_top = 11.0
margin_right = 482.0
margin_bottom = 25.0
text = "MAP
not paused"

[node name="Sprite" type="Sprite" parent="player/Camera2D/Map"]
position = Vector2( 403.158, 275.79 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 12 )

[node name="player_marker" type="Sprite" parent="player/Camera2D/Map"]
position = Vector2( 341.743, 208.675 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )

[node name="ContextMenu" type="TextureRect" parent="player/Camera2D"]
visible = false
margin_left = -497.0
margin_top = -25.0
margin_right = -402.0
margin_bottom = 161.0
texture = ExtResource( 11 )
stretch_mode = 2
script = ExtResource( 18 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button1" type="Button" parent="player/Camera2D/ContextMenu"]
margin_left = 1.46732
margin_top = 60.2939
margin_right = 91.4674
margin_bottom = 80.2939
script = ExtResource( 22 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="player/Camera2D/ContextMenu"]
margin_left = 1.35041
margin_top = 87.7049
margin_right = 91.3505
margin_bottom = 107.705
script = ExtResource( 22 )
number = 1

[node name="Button3" type="Button" parent="player/Camera2D/ContextMenu"]
margin_left = 1.86372
margin_top = 113.342
margin_right = 91.8637
margin_bottom = 133.342
script = ExtResource( 22 )
__meta__ = {
"_edit_use_anchors_": false
}
number = 2

[node name="Button4" type="Button" parent="player/Camera2D/ContextMenu"]
margin_left = 1.35041
margin_top = 136.956
margin_right = 91.3504
margin_bottom = 156.956
script = ExtResource( 22 )
__meta__ = {
"_edit_use_anchors_": false
}
number = 3

[node name="Button5" type="Button" parent="player/Camera2D/ContextMenu"]
margin_left = 1.86372
margin_top = 161.596
margin_right = 91.8637
margin_bottom = 181.596
script = ExtResource( 22 )
__meta__ = {
"_edit_use_anchors_": false
}
number = 4

[node name="CloseButton" type="TextureButton" parent="player/Camera2D/ContextMenu"]
margin_left = 74.4348
margin_top = 3.08005
margin_right = 88.4348
margin_bottom = 17.08
texture_normal = ExtResource( 20 )
script = ExtResource( 19 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="player/Camera2D/ContextMenu"]
margin_left = 5.0
margin_top = 19.0
margin_right = 88.0
margin_bottom = 56.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BigMenu" type="TextureRect" parent="player/Camera2D"]
visible = false
margin_left = -293.0
margin_top = -287.0
margin_right = 491.0
margin_bottom = 289.0
texture = ExtResource( 11 )
stretch_mode = 2
script = ExtResource( 23 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Picture" type="TextureRect" parent="player/Camera2D/BigMenu"]
margin_left = 543.0
margin_top = 28.0
margin_right = 778.0
margin_bottom = 238.0
texture = ExtResource( 21 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="player/Camera2D/BigMenu"]
margin_left = 14.0
margin_top = 26.0
margin_right = 520.0
margin_bottom = 569.0
bbcode_enabled = true
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BigContextMenu" type="TextureRect" parent="player/Camera2D/BigMenu"]
margin_left = 545.0
margin_top = 258.0
margin_right = 772.0
margin_bottom = 557.0
texture = ExtResource( 11 )
stretch_mode = 2
script = ExtResource( 24 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button1" type="Button" parent="player/Camera2D/BigMenu/BigContextMenu"]
margin_left = 53.4502
margin_top = 24.814
margin_right = 193.45
margin_bottom = 54.814
text = "open"
script = ExtResource( 22 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="player/Camera2D/BigMenu/BigContextMenu"]
margin_left = 54.2358
margin_top = 63.055
margin_right = 194.236
margin_bottom = 93.055
script = ExtResource( 22 )
number = 1

[node name="Button3" type="Button" parent="player/Camera2D/BigMenu/BigContextMenu"]
margin_left = 54.7491
margin_top = 100.425
margin_right = 194.749
margin_bottom = 130.425
script = ExtResource( 22 )
__meta__ = {
"_edit_use_anchors_": false
}
number = 2

[node name="Button4" type="Button" parent="player/Camera2D/BigMenu/BigContextMenu"]
margin_left = 55.1384
margin_top = 140.284
margin_right = 195.138
margin_bottom = 170.284
script = ExtResource( 22 )
__meta__ = {
"_edit_use_anchors_": false
}
number = 3

[node name="Button5" type="Button" parent="player/Camera2D/BigMenu/BigContextMenu"]
margin_left = 54.7492
margin_top = 176.656
margin_right = 194.749
margin_bottom = 206.656
script = ExtResource( 22 )
__meta__ = {
"_edit_use_anchors_": false
}
number = 4

[node name="CloseButton2" type="TextureButton" parent="player/Camera2D/BigMenu"]
margin_left = 764.25
margin_top = 7.6694
margin_right = 778.25
margin_bottom = 21.6694
texture_normal = ExtResource( 20 )
script = ExtResource( 19 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpinMenu" type="TextureRect" parent="player/Camera2D"]
visible = false
margin_left = -506.0
margin_top = -293.0
margin_right = 501.0
margin_bottom = 290.0
texture = ExtResource( 11 )
stretch_mode = 2
script = ExtResource( 27 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="wheel" type="Node2D" parent="player/Camera2D/SpinMenu"]
position = Vector2( 256.286, 300 )
script = ExtResource( 25 )
OutputName = "results"

[node name="pointer" type="TextureRect" parent="player/Camera2D/SpinMenu"]
margin_left = 330.535
margin_top = 310.0
margin_right = 394.535
margin_bottom = 374.0
rect_rotation = 270.0
rect_scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="results" type="RichTextLabel" parent="player/Camera2D/SpinMenu"]
margin_left = 179.621
margin_top = 150.0
margin_right = 359.621
margin_bottom = 200.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="wheel2" type="Node2D" parent="player/Camera2D/SpinMenu"]
position = Vector2( 626.323, 300 )
script = ExtResource( 25 )
OutputName = "results2"

[node name="pointer2" type="TextureRect" parent="player/Camera2D/SpinMenu"]
margin_left = 703.572
margin_top = 310.0
margin_right = 767.572
margin_bottom = 374.0
rect_rotation = 270.0
rect_scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="results2" type="RichTextLabel" parent="player/Camera2D/SpinMenu"]
margin_left = 540.793
margin_top = 150.0
margin_right = 720.793
margin_bottom = 200.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpinButton" type="Button" parent="player/Camera2D/SpinMenu"]
margin_left = 497.801
margin_top = 435.101
margin_right = 536.801
margin_bottom = 455.101
text = "Spin"
script = ExtResource( 26 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ContinueButton" type="TextureButton" parent="player/Camera2D/SpinMenu"]
visible = false
margin_left = 687.101
margin_top = 415.105
margin_right = 751.101
margin_bottom = 479.105
rect_rotation = 90.0
texture_normal = ExtResource( 10 )
script = ExtResource( 19 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HUD" parent="player/Camera2D" instance=ExtResource( 3 )]

[node name="looseText" type="RichTextLabel" parent="player/Camera2D"]
visible = false
margin_left = -241.671
margin_top = -146.036
margin_right = 227.329
margin_bottom = 112.964
text = "LooseText!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Area2D" type="Area2D" parent="player"]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="player/Area2D"]
shape = SubResource( 1 )

[node name="activeroom" type="Node2D" parent="."]

[node name="GlobalSounds" type="Node" parent="."]

[node name="warp_sound" type="AudioStreamPlayer" parent="GlobalSounds"]
stream = ExtResource( 15 )
volume_db = -2.0

[node name="button_sound" type="AudioStreamPlayer" parent="GlobalSounds"]
stream = ExtResource( 16 )
volume_db = -2.0
[connection signal="button_up" from="player/Camera2D/Map/Button1" to="player/Camera2D/Map/Button1" method="_on_button_up"]
[connection signal="button_up" from="player/Camera2D/Map/Button2" to="player/Camera2D/Map/Button2" method="_on_button_up"]
[connection signal="area_entered" from="player/Area2D" to="player" method="_on_Area2D_area_entered"]
